<resources>
    <string name="app_name">SearchFriends</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <!-- Strings related with navigation Drawer-->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <!-- Strings related with nav Header-->
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings related with menu-->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <!-- Strings related with Login-->
    <string name="login_tv_support">If your account was not associated with the system, Contact <b>Technical Support</b></string>
    <string name="login_bt_google">Login with google</string>
    <string name="login_bt_login">Login</string>
    <string name="login_bt_register">register</string>
    <!-- Strings related with FireBase-->
    <string name="firebase_title">Login</string>
    <string name="firebase_et_email">Email Address</string>
    <string name="firebase_et_password">Password</string>
    <string name="firebase_enter">Enter</string>
    <!-- Strings related with register -->
    <string name="register_tv_title">Register</string>
    <string name="register_et_name">Name Complete</string>
    <string name="register_et_email">Email Address</string>
    <string name="register_et_password">Created password</string>
    <string name="register_bt_register">Register</string>
    <!-- Strings related with success-->
    <string name="success_congratulations">Congratulations!</string>
    <string name="success_msg">Registration finished</string>
    <!-- Strings related with on boarding-->
    <string name="onboarding_tv_hello">Hello</string>
    <string name="onboarding_tv_human">Human</string>
    <string name="onboarding_tv_msg">Are you willing to see our puppies?</string>
    <!-- Strings relate with home-->
    <string name="home_bt_random">random</string>
    <string name="home_bt_dogs">dogs</string>
    <string name="home_bt_us">us</string>
    <string name="home_bt_search">search</string>
    <string name="home_bt_adopt_me">Adopt me</string>
    <string name="login_bt_invited">Invited</string>
    <string name="details_tv_adopted">Adopted</string>
    <string name="details_tv_description_food">Any diet must be appropriate for the dog. years. Clean, fresh water should be available at all times.</string>
    <string name="details_tv_description_friends">He will look for the opportunity to start doing his pranks. Whether it\'s running, searching or catching, your furry friend will always be available</string>
    <string name="details_bt_back">Back</string>
    <string name="congrats_bt_back">back to home</string>
    <string name="congrats_success_title">oops! we have a mistake</string>
    <string name="congrats_success">Thanks to you, Lucky has a home!</string>
    <string name="terms_text" translatable="false">Lorem ipsum dolor sit amet consectetur adipiscing elit, conubia lacinia curabitur ac ligula gravida, odio nibh arcu fringilla litora congue. Condimentum ligula curabitur urna feugiat dictumst rutrum nullam orci fringilla, natoque hac eleifend nam felis pretium dapibus vehicula commodo \n maecenas, quis varius tellus semper cubilia dis mus eget. Libero mollis egestas volutpat dictum fusce curae commodo odio, sodales malesuada vehicula pretium cubilia felis ad ridiculus facilisis,\n \n  bibendum vivamus et aenean sagittis pellentesque sapien. Fusce hendrerit suspendisse mi laoreet ridiculus purus curabitur aenean integer, ornare mattis vehicula rhoncus fringilla hac diam mollis, inceptos congue natoque elementum conubia interdum commodo potenti. Sociis facilisi nunc nec morbi ultricies praesent ultrices, aliquam ligula consequat vehicula vitae. Blandit etiam nunc fringilla accumsan turpis curabitur sociis aenean bibendum, sagittis libero lectus dui arcu sem at tortor, fusce varius nulla ligula in cum elementum tempor.</string>
    <string name="tv_no_search_title">There are no results with that breed</string>
    <string name="us_tv_members">members</string>
    <string name="us_tv_about_us">More Apps</string>
    <string name="details_tv_description_house">Some dogs may choose to sleep in another room entirely, even if you keep your bedroom door open</string>
    <string name="details_tv_description_health">Create a schedule for your needs. Establish a regular feeding routine so that they manage to relieve themselves more or less at the same time.</string>
    <string name="terms_and_conditions">terms and conditions</string>
</resources>