<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_dog"
    tools:context=".ui.login.LoginFragment">

    <ImageView
        android:id="@+id/title"
        android:layout_width="200dp"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY"
        android:src="@drawable/title_search_friends"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:text="@string/login_tv_support"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/bt_radius_orange"
        android:text="@string/login_bt_register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tv_support" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bt_radius_black"
        android:text="@string/login_bt_login"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/bt_register" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login_google"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/bt_radius_white"
        android:drawableStart="@drawable/icon_google"
        android:paddingStart="15dp"
        android:paddingEnd="45dp"
        android:text="@string/login_bt_google"
        app:layout_constraintBottom_toTopOf="@+id/bt_login"
        tools:ignore="RtlSymmetry" />

</androidx.constraintlayout.widget.ConstraintLayout>