<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.home.DetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_dog"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@drawable/image_mock"
            app:layout_constraintBottom_toTopOf="@+id/gl_hori_0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hori_0.5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_hori_0.4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/layout_radius_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="@+id/gl_hori_0.4">


            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto_bolt"
                android:text="@string/details_tv_adopted"
                android:textColor="@color/black"
                android:textSize="36sp"
                app:layout_constraintEnd_toStartOf="@+id/iv_dog"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_dog"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="100dp"
                android:src="@drawable/icon_dog"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/iv_dog">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/circle_white"
                    android:padding="12dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_food"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/icon_food"
                        android:textColor="@color/black"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/circle_white"
                    android:padding="12dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_health"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/icon_doctor"
                        android:textColor="@color/white"
                        android:textSize="12sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/circle_white"
                    android:padding="12dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_house"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/icon_home"
                        android:textSize="12sp" />
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/circle_white"
                    android:padding="12dp">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/bt_friends"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:background="@drawable/paw_black"
                        android:textSize="12sp" />
                </RelativeLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:fontFamily="@font/ropa_sans"
                android:text="@string/details_tv_description_food"
                android:textSize="22sp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/back"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_text">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_back_white"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="30dp"
                    android:background="@drawable/radius_white"
                    android:elevation="1dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/gl_start_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="50dp"
                    android:elevation="2dp"
                    android:src="@drawable/icon_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/bt_back_black"
                    android:layout_width="0dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="30dp"
                    android:background="@drawable/radius_black"
                    android:elevation="3dp"
                    android:paddingStart="25dp"
                    android:text="@string/details_bt_back"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/gl_finish_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_finish_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.60" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/gl_start_back"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.50" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>